# shared

./: .flake8  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  constraints.txt  jake_whitelist.json  mypy.ini  pyproject.toml  pytype.cfg  setup.cfg
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: CI.yml  CI_win.yml  block_outside_PRs.yml  block_outside_PRs_dipatch.yml  block_outside_PRs_dispatch.yml  block_wf_mods.yml  block_wf_mods_dispatch.yml  block_workflow_mods.yml  block_workflow_mods_dispatch.yml  build_dist.yml  close_pr.yml  deploy_docs.yml  release_to_github.yml  test_install.yml
