# TODO: Drop CVE-2024-34997 from jake_whitelist when dropping Python 3.12 support. https://github.com/crickets-and-comb/shared/issues/34
[metadata]
name = shared
version = 0.11.19
description = Shared resources for Crickets and Comb projects.
long_description = file: README.md
long_description_content_type = text/markdown
author = Kaleb Coberly
maintainer_email = kaleb.coberly@gmail.com
copyright = 2024, Kaleb Coberly